<resources>
    <string name="app_name">Formula 1 App</string>
    <string name="title_circuits">Circuits</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_world_cup">World Cup</string>
    <string name="nationality_thai">Thai</string>
    <string name="nationality_german">German</string>
    <string name="nationality_default">Unknown</string>
    <string name="nationality_russian">Russian</string>
    <string name="nationality_british">British</string>
    <string name="nationality_australian">Australian</string>
    <string name="nationality_mexican">Mexican</string>
    <string name="nationality_monegasque">Monegasque</string>
    <string name="nationality_dutch">Dutch</string>
    <string name="nationality_danish">Danish</string>
    <string name="nationality_austrian">Austrian</string>
    <string name="nationality_canadian">Canadian</string>
    <string name="nationality_finnish">Finnish</string>
    <string name="nationality_french">French</string>
    <string name="nationality_italian">Italian</string>
    <string name="nationality_spanish">Spanish</string>
    <string name="schedule_not_found">❗ Schedule could not be found!</string>
    <string name="finished">Finished</string>
    <string name="plus_one_lap">+1 Lap</string>
    <string name="plus_two_laps">+2 Laps</string>
    <string name="plus_three_laps">+3 Laps</string>
    <string name="wheel">Wheel</string>
    <string name="damage">Damage</string>
    <string name="engine">Engine</string>
    <string name="unit_kph">kph</string>
    <string name="fragment_race_screen_label" translatable="false">{raceName}</string>
    <string name="nationality_swiss">Swiss</string>
    <string name="nationality_american">American</string>
    <string name="nationality_japanese">Japanese</string>
    <string name="nationality_bahraini">Bahraini</string>
    <string name="nationality_arab">Arab</string>
    <string name="nationality_azerbaijani">Azerbaijani</string>
    <string name="nationality_hungarian">Hungarian</string>
    <string name="nationality_belgian">Belgian</string>
    <string name="nationality_brazilian">Brazilian</string>
    <string name="nationality_saudi">Saudi</string>
    <string name="nationality_singaporean">Singaporean</string>
    <string name="nationality_chinese">Chinese</string>
    <string name="dummy_text">Lorem ipsum</string>
    <string name="circuit">Circuit</string>
    <string name="driver">Driver</string>
    <string name="date">Startdate</string>
    <string name="time">Starttime</string>
    <string name="race">Race</string>
    <string name="podium">Podium</string>
    <string name="winner">Winner</string>
    <string name="results">Results</string>
    <string name="status_unknown">Unknown</string>
    <string name="constructor">Constructor</string>
    <string name="driver_ranking_not_found">❗ Driver ranking could not be found!</string>
    <string name="constructor_ranking_not_found">❗ Team ranking could not be found!</string>
    <string name="disqualified">Disqualified</string>
    <string name="accident">Accident</string>
    <string name="collision">Collision</string>
    <string name="gearbox">Gearbox</string>
    <string name="transmission">Transmission</string>
    <string name="clutch">Clutch</string>
    <string name="hydraulics">Hydraulics</string>
    <string name="electrical">Electrical</string>
    <string name="plus_four_laps">+4 Laps</string>
    <string name="plus_five_laps">+5 Laps</string>
    <string name="plus_six_laps">+6 Laps</string>
    <string name="plus_seven_laps">+7 Laps</string>
    <string name="spun_off">Spun off</string>
    <string name="radiator">Radiator</string>
    <string name="suspension">Suspension</string>
    <string name="brakes">Brakes</string>
    <string name="differential">Differential</string>
    <string name="overheating">Overheating</string>
    <string name="mechanical">Mechanical</string>
    <string name="tyre">Tyre</string>
    <string name="driver_seat">Driver seat</string>
    <string name="puncture">Puncture</string>
    <string name="driveshaft">Driveshaft</string>
    <string name="retired">Retired</string>
    <string name="water_pressure">Water pressure</string>
    <string name="exhaust">Exhaust</string>
    <string name="oil_leak">Oil leak</string>
    <string name="withdrew">Withdrew</string>
    <string name="out_of_fuel">Out of fuel</string>
    <string name="power_loss">Power loss</string>
    <string name="collision_damage">Collision damage</string>
    <string name="power_unit">Power unit</string>
    <string name="personal_details">Personal details</string>
    <string name="f1_details">Details in F1</string>
    <string name="more_information">More information</string>
    <string name="fragment_driver_screen_label" translatable="false">{driverName}</string>
    <string name="wikipedia" translatable="false">Wikipedia</string>
    <string name="first_name">First name</string>
    <string name="family_name">Surname</string>
    <string name="birthday">Birthday</string>
    <string name="nationality">Nationality</string>
    <string name="code">Abbreviation</string>
    <string name="team">Team</string>
    <string name="points">Points in current season</string>
    <string name="number">Number</string>
    <string name="age">Age</string>
    <string name="years">Years</string>
    <string name="organisational_structure">Organisational structure</string>
    <string name="drivers">Drivers</string>
    <string name="overview">Overview</string>
    <string name="first_driver">First driver</string>
    <string name="second_driver">Second driver</string>
    <string name="sub_driver">Sub driver</string>
    <string name="name">Name</string>
    <string name="wins">Current wins</string>
    <string name="fragment_team_screen_label" translatable="false">{teamName}</string>
    <string name="circuits_not_found">❗ Circuits could not be retrieved!</string>
    <string name="fragment_circuit_screen_label" translatable="false">{circuitName}</string>
    <string name="locality">Locality</string>
    <string name="country">Country</string>
    <string name="more_info_counter">More information can be read here in</string>
    <string name="days">days</string>
    <string name="open_street_map" translatable="false">OpenStreetMap</string>
    <string name="refresh">Refresh</string>
    <string name="podium_last_season">Podium in last season</string>
    <string name="qualifying">Qualifying results</string>
    <string name="refreshed">Refreshed!</string>
    <string name="nationality_polish">Polish</string>
    <string name="more_info_today">Today is race day! So afterwards you might find more information here.</string>
    <string name="more_info_soon">What just a little bit! Soon there will be more information.</string>
    <string name="teamlead">Team lead</string>
    <string name="tech_director">Technical director</string>
    <string name="sprint_race">Sprint weekend</string>
    <string name="no_last_podium">No last podium available!</string>
    <string name="title_information">Information</string>
    <string name="title_analytics">Analytics</string>
    <string name="source_code">Source Code</string>
    <string name="github" translatable="false">Github</string>
    <string name="latest_release">Latest Release</string>
    <string name="licenses">Licenses</string>
    <string name="ergast_api" translatable="false">Ergast API</string>
    <string name="version">Version</string>
    <string name="app">App</string>
    <string name="non_finished_races">Non-finished races</string>
    <string name="no_data_for_chart">❗ No data for chart available!</string>
    <string name="position_in_the_end">Position in the end of the race</string>
    <string name="development_of_points">Development of points</string>
    <string name="times_in_the_front_row">Times in the first three starters</string>
    <string name="new_version_available">New version available</string>
    <string name="get_it_here">Get it here</string>
    <string name="driver_fastest_speed">Fastest speed per driver (kmh)</string>
    <string name="debug_information">Debug Information</string>
    <string name="nationality_new_zealander">New Zealander</string>
    <string name="sub_drivers">Sub drivers</string>
    <string name="driver_comparison">Driver comparison</string>
</resources>